[gd_scene load_steps=3 format=3 uid="uid://bvladw0ns7xuy"]

[ext_resource type="Script" path="res://village/village_ui/building_button.gd" id="1_p1gha"]
[ext_resource type="Texture2D" uid="uid://od7qsifbm3u2" path="res://village/8c67f9162896721.Y3JvcCw2NjcsNTIxLDM2NiwxMDc.jpg" id="2_ky62h"]

[node name="BuildingButton" type="Button"]
custom_minimum_size = Vector2(0, 40)
size_flags_horizontal = 3
script = ExtResource("1_p1gha")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="IconTexture" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_ky62h")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ev"
vertical_alignment = 1

[node name="CostLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tahta: 50, Ta≈ü: 20"
horizontal_alignment = 2
vertical_alignment = 1
